# restframework-action-permission

./: pyproject.toml
.github/workflows/: CI.yaml  release.yaml
sample_project/sample_project/: settings.py  urls.py
sample_project/store/: models.py  serializers.py  urls.py  views.py
sample_project/store/migrations/: 0001_initial.py
src/restframework_action_permission/: apps.py  permission.py
src/restframework_action_permission/management/: __init__.py
src/restframework_action_permission/management/commands/: start_permission.py
tests/: test_create.py  test_delete.py  test_list.py  test_model_permission.py  test_retrieve.py  test_update.py
tests/fixtures/: product.json  user.json
